# tools-gcp

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: ruff-fix.sh  secret-scan.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  CLONE_TO_RUNNING.md  EML_VIEWER_TELEMETRY.md  GCP_SETUP.md  GIT_STANDARDS.md  SECRETS.md  WAITING_FOR_GCP.md
infra/bigquery/: README.md
infra/bigquery/eml_viewer/gold/: gold_daily_active_users.sql  gold_drop_vs_picker.sql  gold_import_success_rate.sql  gold_repeat_file_opens.sql  gold_unique_files_vs_imports.sql
infra/bigquery/linear/audit/: run_history.sql
infra/bigquery/linear/bronze/: teams.sql  (+19 more)
infra/terraform/: .gitignore  apis.tf  audit.tf  backend.hcl.example  budget.tf  cloud_run_jobs.tf  cloudbuild.tf  eml_viewer_data.tf  iam.tf  jobs.tf  linear_data.tf  local_backend_override.tf.example  observability.tf  org_policy.tf  outputs.tf  resources.tf  state.tf  terraform.tfvars.example  variables.tf  versions.tf  wif.tf
scripts/: bootstrap-project.sh  compact-linear-bronze-pages.py  generate-daily-sweep-report-doc.py  generate-deep-dive-report.py  generate-linear-pipeline-ingress-egress-pdf.py  generate-linear-pipeline-overview-pdf.py  generate-overview-pdf.py  generate-setup-report.py  verify-setup.sh
src/jobs/: README.md
src/jobs/daily-sweep-report/: __init__.py  config.py  dates.py  gmail.py  linear.py  main.py  report.py  secrets.py
src/jobs/eml-viewer-telemetry/: app.py  config.py  ingest.py  secrets.py  validate.py
src/jobs/linear-ingest/: client.py  config.py  entities.py  extract.py  gcs.py  main.py  secrets.py
src/tools/: __init__.py  app.py  config.py  secrets.py
tests/: test_app.py
tests/jobs/daily_sweep_report/: test_dates.py  test_report.py
tests/jobs/eml_viewer_telemetry/: test_telemetry_ingest.py
tests/jobs/linear_ingest/: test_extract.py
