[project]
name = "tools-gcp"
version = "0.1.0"
description = "PlatformEq tools — non-prod GCP services and infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.0.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-auth>=2.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
tools-serve = "tools.app:main"
tools-daily-sweep-report = "daily_sweep_report.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "fpdf2>=2.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/jobs/daily-sweep-report/report.py" = ["E501"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools", "daily_sweep_report"]

[tool.setuptools.package-dir]
tools = "src/tools"
daily_sweep_report = "src/jobs/daily-sweep-report"
